# quantum-math-lab

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  problems.md  pyproject.toml  quantum_simulator.py  schema.json
.github/workflows/: ci.yml
lab/: emergence.py  trinary_extended.py
tests/: conftest.py  test_quantum_simulator.py
