[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-simulator"
version = "1.0.0"
description = "State-vector quantum circuit simulator for the Quantum Math Lab"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[tool.setuptools]
py-modules = ["quantum_simulator"]
